# incolume.py.program-core

./: pyproject.toml
incolume/py/program_core/: __init__.py  main.py
tests/: test_program_core.py
