[tool.poetry]
name = "program-core"
version = "0.1.0"
description = ""
authors = ["Britodfbr <britodfbr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
toml = {extras = ["tomli"], version = "^0.10.2"}

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
